# capstone-project-3900-t11a-elitefive

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  db_classes.hpp  install.sh  muttrc  server.cpp
backend/libs/uWS/: WebSocket.h
backend/mail/: muttrc  send_email.sh
backend/src/: CMakeLists.txt  Makefile  axial.cpp  axial.hpp  bitboard  bitboard.cpp  bitboard.hpp  board  board.cpp  board.hpp  computer.cpp  computer.hpp  game.cpp  game.hpp  hexagon.cpp  hexagon.hpp  main_test.cpp  output.txt
backend/src/database/: db_functions.cpp  db_manager.cpp  db_utils.cpp
backend/src/database/include/: db_classes.hpp  db_functions.hpp  db_manager.hpp  db_utils.hpp
backend/src/game/: aigame.cpp  axial.cpp  basegame.cpp  bitboard.cpp  board.cpp  computer.cpp  game.cpp  main_test.cpp  metadatagen.cpp  search.cpp
backend/src/game/include/: aigame.hpp  axial.hpp  basegame.hpp  bitboard.hpp  board.hpp  computer.hpp  game.hpp  metadatagen.hpp  search.hpp
backend/src/server/: api.cpp  pool.cpp  room.cpp  server.cpp  server_util.cpp
backend/src/server/include/: api.hpp  invite.hpp  pool.hpp  room.hpp  server_util.hpp
database/: Dockerfile  README.md  schema.sql
diaries/: Diary W1,2  z5135742.txt  z5205503.txt  z5230768.txt  z5257079.txt  z5258291.txt
doccumentation/: server.md  server.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: rest.ts
frontend/src/api/ws/: client.ts
frontend/src/classes/: Gamestate.ts
frontend/src/components/: Board.tsx  Dropdown.tsx  FilterBar.tsx  FriendListComponent.tsx  FriendRequest.tsx  HexCell.tsx  PopupContainer.tsx  ProfileWidget.tsx  ReplayImage.tsx  ReplayPreview.tsx  ReusableButton-styled.tsx  ReusableButton.tsx  ReusableCard-styled.tsx  ReusableCard.tsx  ReusableToggle-styled.tsx  ReusableToggleButton.tsx  ScrollWidget.tsx  SnapshotBoard.tsx  SnapshotPopup.tsx  StyledInput.tsx  Tab.tsx  Tables.tsx  YavalathButton.tsx
frontend/src/global/: GlobalAlert.tsx  GlobalAuth.tsx  GlobalGameState.tsx  GlobalMui.tsx  GlobalStyles.tsx  GlobalWS.tsx  ProtectedRoutes.tsx
frontend/src/pages/: Dashboard.tsx  Feedpage.tsx  Forgotpasswordpage.tsx  Friendspage.tsx  Gamemode.tsx  Gamepage.tsx  Homepage.tsx  Leaderboard.tsx  Loginpage.tsx  PageContainer.tsx  Profilepage.tsx  Registerpage.tsx  ReplaySearchpage.tsx  Resetpasswordpage.tsx
frontend/src/pages/Gamepage/: Gamepage.tsx  PopupStatefulComponent.tsx  Sidebar.tsx
frontend/src/pages/InvitePage/: Invitepage.tsx
frontend/src/pages/ReplayGamepage/: ReplayGamePage.tsx  ReplaySidebar.tsx
vm-config/: pg_setup.sh  schema.sql
